[package]
name = "counting_macro"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Baldwin <jbaldwin@nwvariancesoftware.dev>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
