[package]
name = "counting-macros"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Baldwin <jbaldwin@nwvariancesoftware.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MisterEggnog/counting-macro-rs"
description = "Stateful numeric incrementing macros"
readme = "README.md"
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["macro", "macros", "counting", "compile-time", "generate"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
